# cotacoes

./: .env-example  Dockerfile  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  manage.py  pyproject.toml
dolar_cambio/: asgi.py  settings.py  urls.py  wsgi.py
dolar_cambio/apps/cotacoes/: admin.py  apps.py  models.py  populate_db.py  utils.py  views.py
dolar_cambio/apps/cotacoes/api/: routes.py  serializers.py  viewsets.py
dolar_cambio/apps/cotacoes/migrations/: 0001_initial.py
dolar_cambio/apps/cotacoes/static/src/scripts/: calendar.js  chart.js
dolar_cambio/apps/cotacoes/static/src/styles/: dashboard.css
dolar_cambio/templates/: base.html  dashboard.html  grafico.html
dolar_cambio/tests/: test_api.py  test_cotacoes_model.py  test_populate_db.py  test_view.py
